--- a/css/style.css
+++ b/css/style.css
@@ -10,11 +10,6 @@ font-family: 'Source Sans Pro', sans-serif;*/
 	        box-sizing: border-box;
 	font-family: 'Lora', Arial sans-serif;
 }
-/*.wrapper {
-	width: 100%;
-	margin: 0 auto;
-	padding: 0 115px;
-}*/
 header {
 	width: 100%;
 	height: 711px;
@@ -133,7 +128,7 @@ header {
 	display: flex;
 	cursor: pointer;
 }
-.serv__icon img {
+.serv__icon svg {
 	margin: auto;
 }
 .serv__title {
@@ -485,6 +480,14 @@ footer {
 .serv__icon:hover {
 	background-color: yellow;
 	border: 1px solid #00A59F;
+}
+.serv__icon:hover .st0 {
+	fill: yellow;
+	-webkit-transition: all .5s ease-out;
+	   -moz-transition: all .5s ease-out;
+	    -ms-transition: all .5s ease-out;
+	     -o-transition: all .5s ease-out;
+	        transition: all .5s ease-out;
 }
 .portfolio-menu__link:hover {
 	color: #00A5FF;
